[project]
name = "linkedin_crewai_post"
version = "0.1.0"
description = "Generate LinkedIn posts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "flask>=3.1.0",
]

[project.scripts]
crewai_deployment_example = "crewai_deployment_example.main:run"
run_crew = "crewai_deployment_example.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
